# PaperFlip-Reader

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  README.md  cmake_install.cmake
.claude/: settings.local.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
PaperFlip-MVP/: CMakeLists.txt  EPUBManager.cpp  MainWindow.cpp  Makefile  PaperFlip.pro  README.md  ReaderWidget.cpp  build.bat  build_final.bat  build_now.bat  build_qmake.bat  build_quick.bat  build_simple.bat  main.cpp  moc_MainWindow.cpp  moc_PreviewBar.cpp  moc_ReaderWidget.cpp  simple_demo.cpp
PaperFlip-MVP/.claude/: settings.local.json
PaperFlip-MVP/Views/: PreviewBar.cpp
docs/: README.md
include/: README.md
release/: INSTALLATION.md  PaperFlip-Reader-Installer.nsi  README_RELEASE.md  RELEASE_NOTES.md  build-installer.bat
resources/: README.md
src/: main.cpp
src/core/: EPUBManager.cpp  EPUBManager.h  epub_utils.cpp  epub_utils.h
src/ui/: MainWindow.cpp  MainWindow.h  ReaderWidget.cpp  ReaderWidget.h
src/ui/Views/: PreviewBar.h
tests/: README.md
